[gd_scene load_steps=24 format=2]

[ext_resource path="res://art/carga/Captura de pantalla 2023-06-23 084506.png" type="Texture" id=1]
[ext_resource path="res://art/carga/Imagen13.png" type="Texture" id=2]
[ext_resource path="res://art/carga/Imagen14.png" type="Texture" id=3]
[ext_resource path="res://art/carga/Imagen11.png" type="Texture" id=4]
[ext_resource path="res://art/carga/Imagen12.png" type="Texture" id=5]
[ext_resource path="res://art/carga/1.png" type="Texture" id=6]
[ext_resource path="res://art/carga/Imagen15.png" type="Texture" id=7]
[ext_resource path="res://art/carga/Imagen16.png" type="Texture" id=8]
[ext_resource path="res://Scenes/NinePatchRect.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 653, 24 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "mover_x"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 653, 24 ), Vector2( 653, 4 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 78, 67 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "mover_8"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 78, 67 ), Vector2( 78, 40 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 297, 48 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "mover_6"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 297, 48 ), Vector2( 297, 25 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 473, 51 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "mover_7"
length = 3.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 473, 51 ), Vector2( 473, 30 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 453, 205 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "mover_5"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 453, 205 ), Vector2( 453, 183 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 243, 233 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "mover_3"
length = 3.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.78688 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 243, 249 ), Vector2( 243, 220 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 350, 147 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "mover_1"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 350, 164 ), Vector2( 350, 147 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1232.0
margin_bottom = 608.0
texture = ExtResource( 1 )
script = ExtResource( 9 )

[node name="letra_x" type="TextureRect" parent="NinePatchRect"]
margin_left = 653.0
margin_top = 24.0
margin_right = 963.0
margin_bottom = 334.0
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/letra_x"]
anims/RESET = SubResource( 1 )
anims/mover_x = SubResource( 2 )

[node name="numero_8" type="TextureRect" parent="NinePatchRect"]
margin_left = 78.0
margin_top = 67.0
margin_right = 218.0
margin_bottom = 225.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_8"]
anims/RESET = SubResource( 3 )
anims/mover_8 = SubResource( 4 )

[node name="numero_6" type="TextureRect" parent="NinePatchRect"]
margin_left = 297.0
margin_top = 48.0
margin_right = 380.0
margin_bottom = 144.007
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_6"]
anims/RESET = SubResource( 5 )
anims/mover_6 = SubResource( 6 )

[node name="numero_7" type="TextureRect" parent="NinePatchRect"]
margin_left = 473.0
margin_top = 51.0
margin_right = 562.0
margin_bottom = 131.003
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_7"]
anims/RESET = SubResource( 7 )
anims/mover_7 = SubResource( 8 )

[node name="numero_5" type="TextureRect" parent="NinePatchRect"]
margin_left = 453.0
margin_top = 205.0
margin_right = 546.0
margin_bottom = 317.006
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_5"]
anims/RESET = SubResource( 9 )
anims/mover_5 = SubResource( 10 )

[node name="numero_3" type="TextureRect" parent="NinePatchRect"]
margin_left = 243.0
margin_top = 233.0
margin_right = 352.0
margin_bottom = 343.059
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_3"]
anims/RESET = SubResource( 11 )
anims/mover_3 = SubResource( 12 )

[node name="numero_1" type="TextureRect" parent="NinePatchRect"]
margin_left = 350.0
margin_top = 147.0
margin_right = 412.0
margin_bottom = 230.0
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/numero_1"]
anims/RESET = SubResource( 13 )
anims/mover_1 = SubResource( 14 )
